# dopynion-equipe-3

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bootstrap_repo.sh  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
Compte rendu/08_10_2025/: 14h20.md  9h10.md
api/: openapi.json
api/openapi/: openapi.json
scripts/: dev.sh  run.sh  test.sh
src/app/: inspectors.py  legacy_template.py  main.py
src/app/models/: responses.py
src/app/routers/: game.py
src/app/strategy/: actions.py  buys.py  constants.py  pipeline.py  selector.py  state.py  strategies.py  utils.py
templates/: template.py
tests/: conftest.py
tests/contract/: test_openapi_contract.py
tests/e2e/: test_basic_solo_flow.py
tests/integration/: test_game_routes_smoke.py  test_health.py  test_play.py  test_play_legacy.py
tests/property/: test_pipeline_properties.py
tests/unit/: test_actions.py  test_buys.py  test_health.py  test_pipeline.py  test_utils.py
