[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dopynion-equipe-3"
version = "0.1.0"
description = "API de jeu (projet école) - FastAPI"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Equipe 3" }]
dependencies = [
  "fastapi[standard]",
  "python-dotenv>=1.0",
  "dopynion"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6.9",
  "mypy>=1.11",
  "types-requests",
  "pre-commit>=3.8",
  "schemathesis==3.27.1"
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E","F","I","UP","B","PL","RUF"]
ignore = ["E203","E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"
